# Generated by Django 4.2 on 2026-05-24 14:05

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('main', '0003_populate_vacancy_en_fields'),
    ]

    operations = [
        migrations.CreateModel(
            name='CandidateStatus',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=120, unique=True, verbose_name='Название')),
            ],
            options={
                'verbose_name': 'Статус кандидата',
                'verbose_name_plural': 'Статусы кандидатов',
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='ContactMessage',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200, verbose_name='Имя / подпись')),
                ('phone_email', models.CharField(max_length=200, verbose_name='Телефон или email')),
                ('subject', models.CharField(blank=True, max_length=240, verbose_name='Тема')),
                ('message', models.TextField(verbose_name='Текст')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата получения')),
                ('processed_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='processed_contact_messages', to=settings.AUTH_USER_MODEL, verbose_name='Обработал')),
            ],
            options={
                'verbose_name': 'Обращение',
                'verbose_name_plural': 'Обращения',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Department',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200, verbose_name='Название')),
            ],
            options={
                'verbose_name': 'Подразделение',
                'verbose_name_plural': 'Подразделения',
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='Role',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=120, unique=True, verbose_name='Название')),
            ],
            options={
                'verbose_name': 'Роль',
                'verbose_name_plural': 'Роли',
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='SocialLink',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=120, verbose_name='Название')),
                ('base_url', models.URLField(blank=True, max_length=500, verbose_name='Базовый URL')),
            ],
            options={
                'verbose_name': 'Соц. канал',
                'verbose_name_plural': 'Соц. каналы',
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='UserRole',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('role', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='user_links', to='main.role', verbose_name='Роль')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='role_links', to=settings.AUTH_USER_MODEL, verbose_name='Пользователь')),
            ],
            options={
                'verbose_name': 'Роль пользователя',
                'verbose_name_plural': 'Роли пользователей',
            },
        ),
        migrations.CreateModel(
            name='TeamMember',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('first_name', models.CharField(max_length=80, verbose_name='Имя')),
                ('last_name', models.CharField(max_length=80, verbose_name='Фамилия')),
                ('position', models.CharField(max_length=200, verbose_name='Должность')),
                ('photo', models.ImageField(blank=True, upload_to='team/photos/', verbose_name='Фото')),
                ('bio', models.TextField(blank=True, verbose_name='Биография')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата создания записи')),
                ('department', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='members', to='main.department', verbose_name='Подразделение')),
            ],
            options={
                'verbose_name': 'Член команды',
                'verbose_name_plural': 'Команда',
                'ordering': ['last_name', 'first_name'],
            },
        ),
        migrations.CreateModel(
            name='MemberSocialLink',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('url_or_value', models.CharField(max_length=500, verbose_name='URL или значение')),
                ('member', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='socials', to='main.teammember', verbose_name='Сотрудник')),
                ('social', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='main.sociallink', verbose_name='Канал')),
            ],
            options={
                'verbose_name': 'Соц. профиль сотрудника',
                'verbose_name_plural': 'Соц. профили сотрудников',
            },
        ),
        migrations.CreateModel(
            name='ContactMessageAttachment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('file', models.FileField(upload_to='contacts/attachments/', verbose_name='Файл')),
                ('uploaded_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата загрузки')),
                ('message', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='attachments', to='main.contactmessage', verbose_name='Обращение')),
            ],
            options={
                'verbose_name': 'Вложение обращения',
                'verbose_name_plural': 'Вложения обращений',
                'ordering': ['-uploaded_at'],
            },
        ),
        migrations.CreateModel(
            name='CandidateProfile',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('full_name', models.CharField(max_length=240, verbose_name='ФИО')),
                ('phone', models.CharField(max_length=40, verbose_name='Телефон')),
                ('email', models.EmailField(max_length=254, verbose_name='Электронная почта')),
                ('desired_position', models.CharField(max_length=200, verbose_name='Желаемая должность')),
                ('message', models.TextField(verbose_name='Сообщение / о себе')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата подачи')),
                ('status', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='candidates', to='main.candidatestatus', verbose_name='Статус')),
            ],
            options={
                'verbose_name': 'Заявка кандидата',
                'verbose_name_plural': 'Заявки кандидатов',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='CandidateAttachment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('file', models.FileField(upload_to='candidates/attachments/', verbose_name='Файл')),
                ('uploaded_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата загрузки')),
                ('candidate', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='attachments', to='main.candidateprofile', verbose_name='Кандидат')),
            ],
            options={
                'verbose_name': 'Вложение кандидата',
                'verbose_name_plural': 'Вложения кандидата',
                'ordering': ['-uploaded_at'],
            },
        ),
        migrations.AddConstraint(
            model_name='userrole',
            constraint=models.UniqueConstraint(fields=('user', 'role'), name='main_userrole_user_role_uniq'),
        ),
        migrations.AddConstraint(
            model_name='membersociallink',
            constraint=models.UniqueConstraint(fields=('member', 'social'), name='main_membersocial_member_social_uniq'),
        ),
    ]
